src/test/ui/unboxed-closures/unboxed-closure-sugar-wrong-number-number-type-parameters-3.stderr
error[E0107]: wrong number of type arguments: expected 3, found 1
  --> $DIR/unboxed-closure-sugar-wrong-number-number-type-parameters-3.rs:5:16
   |
LL | fn foo(_: &dyn Three())
   |                ^^^^^^^ expected 3 type arguments

error[E0220]: associated type `Output` not found for `Three<(), [type error], [type error]>`
  --> $DIR/unboxed-closure-sugar-wrong-number-number-type-parameters-3.rs:5:21
   |
LL | fn foo(_: &dyn Three())
   |                     ^^ associated type `Output` not found

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0220.
For more information about an error, try `rustc --explain E0107`.
